added dtypes to read_csv calls

--- a/accelerated_data_processing_examples/cudf_pandas_large_string.ipynb
+++ b/accelerated_data_processing_examples/cudf_pandas_large_string.ipynb
@@ -164,7 +164,8 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -201,7 +202,7 @@
    ],
    "source": [
     "%%time\n",
-    "job_summary_df = pd.read_csv(\"job_summary.csv\")\n",
+    "job_summary_df = pd.read_csv(\"job_summary.csv\", dtype=('str'))\n",
     "print(\"Dataset Size (in GB):\",round(job_summary_df.memory_usage(\n",
     "    deep=True).sum()/(1024**3),2))"
    ]
@@ -611,7 +612,7 @@
    ],
    "source": [
     "%%time\n",
-    "job_skills_df = pd.read_csv(\"job_skills.csv\")\n",
+    "job_skills_df = pd.read_csv(\"job_skills.csv\", dtype=('str'))\n",
     "job_skills_df.info()"
    ]
   },
@@ -977,7 +978,7 @@
    ],
    "source": [
     "%%time\n",
-    "job_postings_df = pd.read_csv(\"linkedin_job_postings.csv\")\n",
+    "job_postings_df = pd.read_csv(\"linkedin_job_postings.csv\", dtype=('str'))\n",
     "job_postings_df.info()"
    ]
   },
@@ -2466,28 +2467,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "YRG8TQ90Lkgy",
-   "metadata": {
-    "id": "YRG8TQ90Lkgy"
-   },
-   "source": [
-    "Let's first install cudf latest version-"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "xmwmz-rSOhw7",
-   "metadata": {
-    "id": "xmwmz-rSOhw7"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install --extra-index-url=https://pypi.nvidia.com cudf-cu12==24.8.*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "38aee6bb-46d8-4a2f-b0d5-daf86b12356a",
    "metadata": {
     "id": "38aee6bb-46d8-4a2f-b0d5-daf86b12356a"
@@ -2543,7 +2522,8 @@
    "outputs": [],
    "source": [
     "%load_ext cudf.pandas\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -2579,7 +2559,7 @@
     }
    ],
    "source": [
-    "%time job_summary_df = pd.read_csv(\"job_summary.csv\")\n",
+    "%time job_summary_df = pd.read_csv(\"job_summary.csv\", dtype=('str'))\n",
     "print(\"Dataset Size (in GB):\",round(job_summary_df.memory_usage(\n",
     "    deep=True).sum()/(1024**3),2))"
    ]
@@ -2627,8 +2607,8 @@
    ],
    "source": [
     "%%time\n",
-    "job_skills_df = pd.read_csv(\"job_skills.csv\")\n",
-    "job_postings_df = pd.read_csv(\"linkedin_job_postings.csv\")"
+    "job_skills_df = pd.read_csv(\"job_skills.csv\", dtype=('str'))\n",
+    "job_postings_df = pd.read_csv(\"linkedin_job_postings.csv\", dtype=('str'))"
    ]
   },
   {
